--- a/frontend/about.html
+++ b/frontend/about.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me | Full Stack Developer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Custom CSS for enhanced UI/UX */
+        /* Custom CSS */
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f9;
@@ -49,6 +48,20 @@
             font-size: 1.1rem;
         }
 
+        img.profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 1.5rem;
+        }
+
+        .skills img {
+            width: 50px;
+            height: 50px;
+            margin: 0.5rem;
+        }
+
         footer {
             background-color: #343a40;
             color: #adb5bd;
@@ -63,56 +76,7 @@
         footer a:hover {
             text-decoration: underline;
         }
-
-        /* Button styling */
-        .btn-primary {
-            background-color: #0d6efd;
-            border: none;
-            padding: 0.8rem 1.5rem;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-
-        /* Animation for fade-in effect */
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 1.5s forwards;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
     </style>
-    <script>
-        // JavaScript for interactive UI enhancements
-        document.addEventListener("DOMContentLoaded", () => {
-            // Add fade-in animation on page load
-            document.querySelector('section').classList.add('fade-in');
-
-            // Smooth scrolling for navigation links
-            document.querySelectorAll('.nav-link').forEach(link => {
-                link.addEventListener('click', function (e) {
-                    if (this.hash !== "") {
-                        e.preventDefault();
-                        const hash = this.hash;
-                        document.querySelector(hash).scrollIntoView({
-                            behavior: "smooth",
-                            block: "start"
-                        });
-                    }
-                });
-            });
-        });
-    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -133,8 +97,9 @@
     </nav>
 
     <section id="about" class="bg-light">
-        <div class="container">
-            <h1>About Me</h1>
+        <div class="container text-center">
+            <img src="assets/img/profile-photo.png" alt="Your Photo" class="profile-img">
+            <h1>Suson Khatri</h1>
             <p>
                 I am a passionate Full Stack Web Developer, Certified Cloud Practitioner, and AI/ML Developer. 
                 I specialize in creating efficient and visually stunning solutions that merge creativity with cutting-edge technology.
@@ -143,9 +108,45 @@
                 My expertise spans across modern web development frameworks like React, Django, and Node.js, 
                 coupled with a solid foundation in cloud computing with AWS, and AI/ML projects using TensorFlow and PyTorch.
             </p>
+        </div>
+    </section>
+
+    <section id="skills" class="py-5">
+        <div class="container text-center">
+            <h2>Skills</h2>
+            <div class="skills d-flex justify-content-center flex-wrap mt-4">
+                <img src="assets/img/html.png" alt="HTML">
+                <img src="assets/img/css.jpeg" alt="CSS">
+                <img src="assets/img/javascripts.png" alt="JavaScript">
+                <img src="assets/img/python.jpeg" alt="Python">
+                <img src="assets/img/aws.jpeg" alt="AWS">
+                <img src="assets/img/ml.jpeg" alt="Machine Learning">
+            </div>
+        </div>
+    </section>
+
+    <section id="services" class="bg-light py-5">
+        <div class="container text-center">
+            <h2>Services</h2>
+            <p>Offering professional services in:</p>
+            <ul class="list-unstyled">
+                <li>Full Stack Web Development</li>
+                <li>Cloud Solutions with AWS</li>
+                <li>AI/ML Development</li>
+                <li>UI/UX Design</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact" class="py-5">
+        <div class="container text-center">
+            <h2>Contact Me</h2>
+            <p>Email: suson.khatri@example.com</p>
+            <p>Phone: +1 123 456 7890</p>
             <p>
-                I thrive in dynamic environments, collaborating with diverse teams to deliver solutions that exceed expectations. 
-                Let’s create something exceptional together!
+                Connect on 
+                <a href="https://linkedin.com/in/suson-khatri" target="_blank">LinkedIn</a> or 
+                <a href="https://github.com/KhatriSuson" target="_blank">GitHub</a>
             </p>
         </div>
     </section>
