--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="test.html">test</a></li>
                 </ul>
             </div>
         </div>
