--- a/frontend/about.html
+++ b/frontend/about.html
@@ -145,7 +145,7 @@
                 <!-- Service 2: Cloud Solutions with AWS -->
                 <div class="col-md-3 mb-4">
                     <div class="service-card p-4 shadow-sm rounded" data-bs-toggle="tooltip" data-bs-placement="top" title="Cloud Solutions with AWS">
-                        <img src="images/aws-icon.png" alt="AWS Cloud Solutions" class="service-icon mb-3">
+                        <img src="./assets/img/cloud-solution.jpeg" alt="AWS Cloud Solutions" class="service-icon mb-3">
                         <h4>Cloud Solutions with AWS</h4>
                         <p>
                             Scalable and secure cloud architectures with AWS for high availability and fault tolerance.
