--- a/frontend/test.html
+++ b/frontend/test.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+                
+        <div class="logo">
+            <a href="/">
+                Suson Khatri
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 </body>
 </html>
