--- a/frontend/services.html
+++ b/frontend/services.html
@@ -175,15 +175,16 @@
     <!-- Navigation -->
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#certifications">Certifications</a></li>
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    
 
     <!-- Main Content -->
     <div class="container">
