--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             <div class="logo">
                 <a href="#home">Sushan Khatri</a>
             </div>
-            <button class="theme-toggle" aria-label="Toggle theme">
+            <button class="theme-toggle">
                 🌗
             </button>
             <nav>
@@ -43,12 +44,28 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div>
-            <h1>Hi, I'm Sushan Khatri</h1>
-            <p>Full Stack Developer | Cloud Practitioner | AI/ML Engineer</p>
-            <a href="https://github.com/KhatriSuson" class="cta-button">View My Work</a>
+        <div class="hero-content">
+            <div class="text-content">
+                <h1>Hi, I'm Sushan Khatri</h1>
+                <p>Full Stack Developer | Cloud Practitioner | AI/ML Engineer</p>
+                <a href="https://github.com/KhatriSuson" class="cta-button" target="_blank">View My Work</a>
+                <div class="social-icons">
+                    <a href="https://github.com/KhatriSuson" target="_blank" class="icon-link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://linkedin.com/in/YOUR_LINKEDIN_PROFILE" target="_blank" class="icon-link">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="image-content">
+                <img src="./assets/img/profile-photo.png" alt="Profile" class="profile-image">
+                <div class="border-design"></div>
+            </div>
         </div>
+        <div id="background-animation"></div>
     </section>
+    
 
 
 
@@ -245,7 +262,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="js/portfolio-script.js"></script>
 </body>
 
 </html>
