--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
                     <a href="https://github.com/KhatriSuson" target="_blank" class="icon-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/YOUR_LINKEDIN_PROFILE" target="_blank" class="icon-link">
+                    <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank" class="icon-link">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
@@ -99,9 +99,9 @@
 
             <!-- Social Links -->
             <div class="social-links">
-                <a href="#" target="_blank" class="social-link linkedin">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank" class="social-link linkedin">LinkedIn</a>
                 <a href="https://github.com/KhatriSuson" target="_blank" class="social-link github">GitHub</a>
-                <a href="#" target="_blank" class="social-link twitter">Twitter</a>
+                <a href="https://x.com/SushanKhatri4" target="_blank" class="social-link twitter">Twitter</a>
             </div>
         </div>
     </section>
