portfolio section complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,38 +99,69 @@
 
             <!-- Social Links -->
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank" class="social-link linkedin">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank"
+                    class="social-link linkedin">LinkedIn</a>
                 <a href="https://github.com/KhatriSuson" target="_blank" class="social-link github">GitHub</a>
                 <a href="https://x.com/SushanKhatri4" target="_blank" class="social-link twitter">Twitter</a>
             </div>
         </div>
     </section>
 
-
-    <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio">
-        <div class="animated-background"></div>
+
+        <!-- Background with dynamic animated icons -->
+        <div class="animated-background">
+            <div class="cloud-icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+            </div>
+            <div class="web-icon">
+                <i class="fa fa-code" aria-hidden="true"></i>
+            </div>
+            <div class="ai-icon">
+                <i class="fa-brands fa-aws"></i>
+            </div>
+            <div class="code-icon">
+                <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <div class="code-icon">
+                <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <div class="code-icon">
+                <i class="fa-solid fa-database"></i>
+            </div>
+            <div class="code-icon">
+                <i class="fa-solid fa-microchip"></i>
+            </div>
+        </div>
+
+        <!-- Portfolio Content -->
         <div class="container">
             <h2>Portfolio</h2>
+
             <div class="projects">
                 <div class="project-card">
-                    <img src="./assets/img/cloud-solution.jpeg" alt="Project 1">
+                    <img src="./assets/img/cloud-solution.jpeg" alt="Web Development Project">
                     <h3>Web Development Project</h3>
                     <p>Developed a responsive e-commerce website using React and Node.js.</p>
                 </div>
+
                 <div class="project-card">
-                    <img src="./assets/img/ecom.png" alt="Project 2">
+                    <img src="./assets/img/aws.jpeg" alt="Cloud Solution">
                     <h3>Cloud Solution</h3>
                     <p>Deployed a serverless application on AWS using Lambda and API Gateway.</p>
                 </div>
+
                 <div class="project-card">
-                    <img src="project3.jpg" alt="Project 3">
+                    <img src="./assets/img/ml.jpeg" alt="AI/ML Model">
                     <h3>AI/ML Model</h3>
                     <p>Created a machine learning model for sentiment analysis using Python and TensorFlow.</p>
                 </div>
             </div>
         </div>
+
+
     </section>
+
 
 
 
